# omnis-py

./: .env.example  .gitignore  README.md  example.py  publish_manual.sh  pyproject.toml  release.sh
.github/workflows/: ci.yml
src/omnis/: __init__.py  cli.py  client.py  tenants.py
tests/: test_client.py
